<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige_crema"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:src="@drawable/galletasAvenaPasas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientes_titulo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingredientes_titulo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_1"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_2"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_3"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_4"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_5"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_ingrediente_6"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <!-- Pasos -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_pasos_titulo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_1"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_2"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_3"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_4"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_5"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galletas_avena_pasas_paso_6"
                android:paddingLeft="16dp"
                android:paddingBottom="4dp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/marronGalleta"
        app:itemIconTint="@color/beige_crema"
        app:itemTextColor="@color/beige_crema"
        app:menu="@menu/bottomenu"
        />

</LinearLayout>