<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige_crema"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:src="@drawable/reposteriabuena"
        android:layout_margin="20dp"
        >
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionIngredientes"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        >

    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxLimon"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/limon"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxHuevos"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/huevos"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxChoco"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/choco"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxMantequilla"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mantequilla"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxAzucar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/azucar"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxVainilla"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/vainilla"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxFrutosSecos"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/frutosSecos"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxLeche"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/leche"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxMiel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/fresas"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxArandanos"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/arandanos"/>

            <CheckBox
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/checkBoxAvena"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/avena"/>

            <Button
                android:id="@+id/botonBuscarIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/botonBuscar"
                android:background="@color/marronGalleta"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>